--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </ul>
       </nav>
       <div class="header__logo">
-        <img class="header__logo-image" src="/images/logo-black.svg">
+        <img class="header__logo-image" src="/images/logo-black.svg" alt="Логотип с текстом 'оно тебе надо'">
       </div>
       <address class="address">
         <a href="tel:+99995555555">+9 999 555 5555</a><br>
@@ -79,7 +79,7 @@
       </section>
       <section class="about">
         <div class="about__logo">
-          <img class="about__logo-image" src="images/logo-black.svg">
+          <img class="about__logo-image" src="images/logo-black.svg" alt="Картинка с текстом 'оно тебе надо'">
         </div>
         <h2 class="about__title">Об аукционе</h2>
         <p class="about__text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
@@ -108,17 +108,17 @@
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#">
-            <img class="footer__social-icon" src="images/yt.svg">
+            <img class="footer__social-icon" src="images/yt.svg" alt="Иконка youtube">
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#">
-            <img class="footer__social-icon" src="images/vk.svg">
+            <img class="footer__social-icon" src="images/vk.svg" alt="Иконка vk">
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#">
-            <img class="footer__social-icon" src="images/pinterest.svg">
+            <img class="footer__social-icon" src="images/pinterest.svg" alt="Иконка pinterest">
           </a>
         </li>
       </ul>
