Implement cover section

--- a/index.html
+++ b/index.html
@@ -39,15 +39,21 @@
     <section class="cover">
       <div class="overlay">
       </div>
-      <h1 class="cover__title">
-        <span class="aligned-text">оно</span>
-        <span class="aligned-text_center">тебе</span>
-        <span class="aligned-text_right">надо</span>
-      </h1>
-      <div class="cover__description">
-        <h2 class="cover__description-text">Аукцион вещей, вкоторые никто не верил</h2>
+      <div class="cover__title">
+        <h1 class="aligned-text">
+          о<span class="letter-spacing-extended">но</span>
+        </h1>
+        <h1 class="aligned-text_center">
+          те<span class="letter-spacing-extended">бе</span>
+        </h1>
+        <h1 class="aligned-text_right">
+          <span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span>
+        </h1>
       </div>
-      <button class="bet-button">Сделать ставку</button>
+      <div class="cover__description">
+        <h2 class="cover__description-text">Аукцион<span class="space-90"> </span>вещей,<span class="space-80"> </span><span class="space-110">в</span>которые<span class="space-80"> </span>никто<span class="space-90"> </span>не<span class="space-80"> </span>верил</h2>
+        <button class="bet-button">Сделать ставку</button>
+      </div>
     </section>
     <section class="lots">
       <h2 class="lots__heading">Лоты</h2>
