--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         <h2 class="lots__heading">Лоты</h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item card_type_film">
+            <div class="overlay"></div>
             <a class="card-link">
               <article class="card">
                 <h3 class="card__title">
@@ -87,6 +88,7 @@
             </a>
           </li>
           <li class="lots__card-list-item card_type_book">
+            <div class="overlay"></div>
             <a class="card-link">
               <article class="card">
                 <h3 class="card__title">
@@ -104,6 +106,7 @@
             </a>
           </li>
           <li class="lots__card-list-item card_type_picture">
+            <div class="overlay"></div>
             <a class="card-link">
               <article class="card">
                 <h3 class="card__title">
