--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <a class="header__logo">
         <img
           class="header__logo-image"
-          src="/images/logo-black.svg"
+          src="./images/logo-black.svg"
           alt="Логотип с текстом 'оно тебе надо'"
         />
       </a>
@@ -57,15 +57,9 @@
           </h1>
         </div>
         <div class="cover__description">
-          <h2 class="cover__description-text">
-            Аукцион<span class="space-90"> </span>вещей,<span class="space-80">
-            </span
-            ><span class="space-110">в</span>которые<span class="space-80">
-            </span
-            >никто<span class="space-90"> </span>не<span class="space-80">
-            </span
-            >верил
-          </h2>
+          <p class="cover__description-text">
+            Аукцион вещей, в<span class="word-spacing"> которые никто не верил</span>
+          </p>
           <button class="bet-button">Сделать ставку</button>
         </div>
       </section>
@@ -115,7 +109,7 @@
                 <p class="card__text">
                   Ну действительно, там линия, тут кружочек, а здесь и вовсе
                   что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
-                  котиков<span class="letter-spacing-13">...</span> Сколько бы вы на такое поставили, если бы не знали,
+                  котиков... Сколько бы вы на такое поставили, если бы не знали,
                   что это — одна из революционных работ Кандинского?
                 </p>
               </article>
@@ -128,7 +122,7 @@
         <div class="about__logo">
           <img
             class="about__logo-image"
-            src="images/logo-white.svg"
+            src="./images/logo-white.svg"
             alt="Картинка с текстом 'оно тебе надо'"
           />
         </div>
@@ -178,7 +172,7 @@
           <a class="footer__social-link" href="#">
             <img
               class="footer__social-icon"
-              src="images/yt.svg"
+              src="./images/yt.svg"
               alt="Иконка youtube"
             />
           </a>
@@ -187,7 +181,7 @@
           <a class="footer__social-link" href="#">
             <img
               class="footer__social-icon"
-              src="images/vk.svg"
+              src="./images/vk.svg"
               alt="Иконка vk"
             />
           </a>
@@ -196,7 +190,7 @@
           <a class="footer__social-link" href="#">
             <img
               class="footer__social-icon"
-              src="images/pinterest.svg"
+              src="./images/pinterest.svg"
               alt="Иконка pinterest"
             />
           </a>
