Fix cover title

--- a/index.html
+++ b/index.html
@@ -43,17 +43,10 @@
       <section class="cover">
         <div class="overlay"></div>
         <div class="cover__title">
-          <h1 class="aligned-text">
-            о<span class="letter-spacing-extended">но</span>
-          </h1>
-          <h1 class="aligned-text_center">
-            те<span class="letter-spacing-extended">бе</span>
-          </h1>
-          <h1 class="aligned-text_right">
-            <span class="letter-spacing-extended">н</span>ад<span
-              class="no-letter-spacing"
-              >о</span
-            >
+          <h1>
+            <span class="aligned-text">о<span class="letter-spacing-extended">но</span></span>
+            <span class="aligned-text_center"> те<span class="letter-spacing-extended">бе</span></span>
+            <span class="aligned-text_right"><span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span></span>
           </h1>
         </div>
         <div class="cover__description">
